turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:23: error: Int does not take parameters
    gauche()
          ^Turmite:30: error: Int does not take parameters
    droite()
          ^